TODO

* Really need to do something about all the disabled options in the
  config dialog. Some of them might make sense.


KPilot Developer's notes for july 7th, 2002
===========================================

KPilot Developer's notes for june 24th, 2002
============================================

Moving on past 3.0.2 and trying to sort things out.

2002-06-24  Adriaan de Groot
* The config file the daemon allocates is read-only. This is inconvenient
  when conduits want to save data in the config file. Backed that out,
  am now worried about what happens when you leave the KPilot UI running
  during a sync, since both applications have a RW copy of the config file.

2002-06-24  Reinhold Kainhofer
  Still fighting with the addressbook conduit. The Palm -> PC way already
  seems to work. Haven't committed anything yet to prevent breaking 
  compilation of the kdepim module with a conduit which won't work yet anyway.
  

KPilot Developer's notes for june 16th, 2002
============================================

2002-06-16 Reinhold Kainhofer
* backported many fixes in the vcal conduits to the BRANCH for the 3.0.2
  release. 
* For the addressbook conduit I implemented a method 
  QValueList<recordid_t> PilotDatabase::idList()
  which returns a list of all record ids in the database
* KPilotDeviceLink::openDatabases now fetches the database from the palm 
  if no backup copy exists on the PC.

KPilot Developer's notes for june 9th, 2002
===========================================

Not sure just what Reinhold has been up to recently, but
I know I've been sitting in the sun and relaxing. Mostly.

H==HEAD, B==Branch in the bracketed notes after the patch description.

2002-06-10  Adriaan de Groot
* Using version 4.3.3 in BRANCH for the 3.0.2 release, and
  4.3.4 in HEAD for later.

2002-06-08  Adriaan de Groot
* Conduits, conduits, conduits and documentation, documentation, documentation.
  That's what we need. Sigh.

2002-06-07  Adriaan de Groot